--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -1,53 +1,20 @@
-.footerStyle {
-  padding: var(--space-2xl) var(--space-xl);
-  gap: var(--space-xl);
-  display: grid;
-  grid-template-columns: 1fr;
-  text-align: center;
-  color: var(--text-color-secondary);
-  margin-top: var(--space-3xl);
-}
-
-.logos {
-  display: flex;
-  gap: var(--space-md);
-  justify-content: center;
-  padding-bottom: var(--space-lg);
-}
-
-.blurb {
-  font-size: var(--text-sm);
-}
-
-.copyright {
-  color: var(--text-color-secondary);
-  font-size: var(--text-xs);
-}
-
-.footerNavList {
-  display: flex;
-  flex-direction: column;
-  font-size: var(--text-md);
-}
-
-.footerNavListItem {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  flex: 0 0 100%;
-  white-space: nowrap;
-}
-
-.links ul {
-  flex-direction: column;
-  font-size: var(--text-md);
-}
-
-.links li {
-  flex-direction: column;
-  align-items: center;
-}
-
-.links a {
-  padding: var(--space-md);
+.footer {
+  background-color: #313131;
+  color: var(--white);
+  &__section {
+    &__logo {
+      max-width: 300px;
+    }
+    &__social {
+      &:hover {
+        filter: drop-shadow(2px 2px 10px var(--primary_blue));
+      }
+    }
+  }
+  A {
+    color: var(--primary_blue);
+    &:hover {
+      color: var(--white);
+    }
+  }
 }
