--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,12 +1,14 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   font-family: var(--font-body);
   color: var(--text-color);
 }
 
-.gatsby-image-wrapper {
-  margin: auto;
-}
-
-.gatsby-image-wrapper [data-main-image] {
-  border-radius: var(--radius-sm);
+.title {
+  font-size: 3rem;
+  color: var(--primary_blue);
+  font-weight: 900;
 }
